# TKiK

./: README.md
NeuroLang/: .gitignore  README.md  components.json  config.yaml  constants.py  datasets.json  loaders.py  neurolang.lark  pyproject.toml  requirements.txt  show_ast.py
NeuroLang/data/: sample_data.csv
NeuroLang/examples/: 01_mnist_basic.nl  02_mnist_cnn.nl  03_fashion_mnist_cnn.nl  04_cifar10_cnn.nl  05_tabular_data_csv.nl  06_advanced_features.nl  07_evaluation.nl  08_full_pipeline.nl  09_if_statements.nl  10_binary_classification_csv.nl  11_regression_csv.nl  12_multiconfig_binding.nl  13_two_networks_trainable.nl  14_advanced_conditions.nl  15_comparison_branching.nl  err_conv_shape.nl  err_dense_mismatch.nl  err_div_zero.nl  err_dropout_p.nl  err_duplicate_config_key.nl  err_evaluate_unknown.nl  err_invalid_task.nl  err_maxpool_sequence.nl  err_metrics_mismatch.nl  err_mixed_network_commands.nl  err_redefinition.nl  err_syntax.nl  err_undefined_config.nl  err_undefined_if_cond.nl
NeuroLang/src/: __init__.py  config.py  loaders.py  logger.py
NeuroLang/src/cli/: __init__.py  show_ast.py
NeuroLang/src/codegen/: __init__.py
NeuroLang/src/parser/: __init__.py  grammar.py
NeuroLang/src/semantic/: __init__.py
kolorowanie_skladni/: README.md  css_class.py  highlighter.py  html_template.py  scanner.py  token_printer.py  tokens.py
skaner/: README.md  examples.py  operators.py  scanner.py  zadanie.md
